manifests/kibana/kibana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    name: ui
    targetPort: ui
  selector:
    k8s-app: kibana-logging
  type: NodePort
