manifests/kibana/kibana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
spec:
  backend:
    serviceName: kibana-logging
    servicePort: 5601
